--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 .button {
-    margin-top: 3vh;
+    margin-bottom: 3vh;
     height: 8vh;
     background-color: white;
     border-radius: 8px;
@@ -16,13 +16,25 @@
 .player-cards {
     display: flex;
     flex-direction: column;
-    height: 55vh;
+    height: 40vh;
     margin-top: 2vh;
     border: 1px solid black;
 }
 
+.logo {
+    height: 10vh;
+}
+
+.player-text {
+    font-size: 20px;
+    font-weight: bold;
+    width: 10vw;
+    display: flex;
+    align-items: center;
+}
+
 .card {
-    height: 40vh;
+    height: 32vh;
     width: 15vw;
     margin-left: 2vw;
     border: 2px solid black;
@@ -30,6 +42,7 @@
     display: flex;
     flex-direction: column;
     visibility: collapse;
+    background-color: rgb(0, 119, 255);
 }
 
 .number {
@@ -55,16 +68,69 @@
 .player-points {
     display: flex;
     flex-direction: row;
+    height: 10vh;
 }
 
-.pointsnumber {
-    margin-left: 6vw;
+.points-value {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 50px;
+}
+
+.points {
+    width: 20vw;
 }
 
 .image {
-    height: 200px;
-    width: 200px;
-    margin-left: 2vw;
+    height: 50%;
+    width: 90%;
+    margin-left: 1vw;
     margin-right: 2vw;
     margin-top: 1vh;
+
+}
+
+.controlls {
+    display: flex;
+    flex-direction: column;
+}
+
+.logo-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.content {
+    display: flex;
+    flex-direction: row;
+}
+
+.card-section {
+    width: 75vw;
+}
+
+.statistics {
+    margin-left: 2vw;
+    width: 15vw;
+}
+
+.result {
+    height: 10vh;
+    font-weight: bold;
+    font-size: 20px;
+    width: 20vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: green;    
+}
+
+.attribution {
+    font-size: 20px;
+    color: black;
+    margin-top: 1vh;
+    font-weight: bold;
 }
