--- a/style.css
+++ b/style.css
@@ -14,11 +14,10 @@
 }
 
 .player-cards {
-    display: flex;
-    flex-direction: column;
-    height: 40vh;
-    margin-top: 2vh;
     border: 1px solid black;
+    padding-bottom: 2vw;
+    margin-bottom: 2vw;
+    min-height: 34vh;
 }
 
 .logo {
@@ -34,24 +33,21 @@
 }
 
 .card {
-    height: 32vh;
-    width: 15vw;
+    height: 23vw;
+    width: 16vw;
     margin-left: 2vw;
     border: 2px solid black;
     border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    visibility: collapse;
+    display: none;
     background-color: rgb(0, 119, 255);
+    padding: 1vw;
 }
 
 .number {
-    height: 30%;
+    height: 10%;
     width: 6vw;
     margin-top: 2.5vh;
     margin-left: 10%;
-    padding-left: 35%;
-    padding-top: 10%;
     font-size:60px;
     font-weight: bold;
     color: blue;
@@ -84,12 +80,10 @@
 }
 
 .image {
-    height: 50%;
-    width: 90%;
-    margin-left: 1vw;
-    margin-right: 2vw;
-    margin-top: 1vh;
-
+    height: 200px;
+    width: 100%;
+    display: block;
+    background-size: cover;
 }
 
 .controlls {
