--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
     border: 1px solid black;
     padding-bottom: 2vw;
     margin-bottom: 2vw;
-    min-height: 34vh;
+    height: 35vh;
 }
 
 .logo {
@@ -33,7 +33,7 @@
 }
 
 .card {
-    height: 23vw;
+    height: 15vw;
     width: 16vw;
     margin-left: 2vw;
     border: 2px solid black;
@@ -47,8 +47,10 @@
     height: 10%;
     width: 6vw;
     margin-top: 2.5vh;
-    margin-left: 10%;
     font-size:60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-weight: bold;
     color: blue;
 }
