--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@
 .player-cards {
     border: 1px solid black;
     padding-bottom: 2vw;
-    margin-bottom: 2vw;
-    height: 35vh;
+    margin-bottom: 1vw;
+    height: 320px;
 }
 
 .logo {
@@ -33,8 +33,8 @@
 }
 
 .card {
-    height: 15vw;
-    width: 16vw;
+    height: 250px;
+    width: 250px;
     margin-left: 2vw;
     border: 2px solid black;
     border-radius: 10px;
