--- a/style.css
+++ b/style.css
@@ -44,13 +44,10 @@
 }
 
 .number {
-    height: 10%;
-    width: 6vw;
-    margin-top: 2.5vh;
+    height: 20%;
+    width: 100%;
     font-size:60px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
     font-weight: bold;
     color: blue;
 }
