--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
     border: 1px solid black;
     padding-bottom: 2vw;
     margin-bottom: 1vw;
-    height: 320px;
+    height: 340px;
 }
 
 .logo {
@@ -47,6 +47,7 @@
     height: 20%;
     width: 100%;
     font-size:60px;
+    margin-top: 10px;
     text-align: center;
     font-weight: bold;
     color: blue;
@@ -79,8 +80,10 @@
 }
 
 .image {
-    height: 200px;
-    width: 100%;
+    height: 160px;
+    width: 160px;
+    padding-left: 44px;
+    padding-top: 10px;
     display: block;
     background-size: cover;
 }
@@ -124,6 +127,7 @@
 .attribution {
     font-size: 20px;
     color: black;
-    margin-top: 1vh;
+    margin-top: 0.1vh;
+    margin-left: 0.2vw;
     font-weight: bold;
 }
