--- a/style.css
+++ b/style.css
@@ -120,8 +120,8 @@
     width: 20vw;
     display: flex;
     justify-content: center;
-    align-items: center;
-    background-color: green;    
+    align-items: center; 
+    padding-left: 0.2vw;
 }
 
 .attribution {
